# multi-agent

./: LICENSE  pyproject.toml  run_crew.sh  run_server.sh
multi_agent/: crew.py  server.py
