[tool.poetry]
name = "multi-agent"
version = "0.1.0"
description = ""
authors = ["Duncan Haywood <duncan.haywood.ai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
crewai = "^0.30.11"
openai = "^1.30.3"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"
crewai-tools = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
